# openmp

./: CMakeLists.txt  main.cpp  task2.cpp
